@@ -211,6 +211,8 @@ span.span_description description narrative.empty	{display:none;}	/*	Hides conta
 
 /*	Result and description
 	============================================= */
+result > *					{display:none;}
+indicator > *				{display:none;}
 span.span_result			{counter-reset:section;}
 result						{counter-reset:subsection; display:block; padding:20px 0; position:relative; border-top:1px solid #000;}
 result:nth-child(1)			{padding-top:0; border:0;}
@@ -340,13 +342,13 @@ sector > *				{display:none;}
 span.span_sector:before	{content:"Sector"; font-size:20px; color:#000; display:block; padding:40px 40px 20px 40px; width:900px; margin-left:-10px;}
 span.span_sector > *	{display:none;}
 span.span_sector		{z-index:1; position:relative; border-top:1px solid #000;}
+span.span_sector:after	{content:""; display:block; padding-bottom:40px; background-color:#FFF;}
 span.span_sector sector[vocabulary="DAC"],
 span.span_sector sector[vocabulary="1"],
 span.span_sector sector[vocabulary="2"]		{display:block; padding:0 40px;}
 span.span_sector sector[vocabulary="2"]:nth-of-type(1):before	{content:"SECTOR GROUP"; font-size:14px; color:#000; width:240px; display:block; padding-bottom:5px;}
 span.span_sector sector	{background-color:rgba(255,255,255,1); position:relative; z-index:-1;}
 span.span_sector sector:nth-of-type(1)		{padding-top:40px;}
-span.span_sector sector:last-of-type		{padding-bottom:40px;}
 span.span_sector sector span				{color:#000; font-size:14px; line-height:18px; display:inline-block; text-align:right; vertical-align:middle;}
 span.span_sector sector span.sec_code		{width:200px; min-height:25px; padding:10px 20px; border-right:1px solid #000;}
 span.span_sector sector span.sec_code:after						{content:attr(code); margin-left:10px; border:1px solid #000; padding:2px 5px; border-radius:4px; font-size:11px; color:#000; white-space:nowrap;}
@@ -728,3 +730,27 @@ span.span_transaction_code_13 span.length	{left:150px;}
 
 span.span_transaction_code_2 span.length,
 span.span_transaction_code_11 span.length	{left:200px;}
+
+
+/*	Chartist SVG
+	============================================= */
+.transactions_svg {display:block; width:920px; height:240px; margin:auto; margin-bottom:30px; padding-top:15px;}
+.transactions_svg *		{display:block;}
+.transactions_svg svg	{display:block; overflow:visible;}
+
+.ct-label	{fill:#000; color:#000 !important;}
+.ct-grid	{stroke:rgba(0,0,0,0.4) !important;}
+
+.svg_line_transaction_type_1	{stroke:#09f;}
+.svg_line_transaction_type_2	{stroke:#f05b4f;}
+.svg_line_transaction_type_3	{stroke:#90EE90;}
+.svg_line_transaction_type_4	{stroke:#f4c63d;}
+.svg_line_transaction_type_5	{stroke:#CC90EE;}
+.svg_line_transaction_type_6	{stroke:#2E2CF1;}
+.svg_line_transaction_type_7	{stroke:#00B601;}
+.svg_line_transaction_type_8	{stroke:#FFB000;}
+.svg_line_transaction_type_9	{stroke:#C0005F;}
+.svg_line_transaction_type_10	{stroke:#FF34E5;}
+.svg_line_transaction_type_11	{stroke:#AF77CF;}
+.svg_line_transaction_type_12	{stroke:#5956B9;}
+.svg_line_transaction_type_13	{stroke:#3AAEBE;}
