@@ -478,6 +478,7 @@ result a.a_reference:hover reference:after	{color:rgba(255,183,0,1);}
 /*	Sectors (also turned into graph)
 	============================================= */
 span.span_sector:before	{color:rgba(255,255,255,1); background-color:rgba(206,131,0,1);}
+span.span_sector:after	{background-color:rgba(255,255,255,1);}
 span.span_sector sector	{background-color:rgba(255,255,255,1); color:rgba(204,204,204,1);}
 span.span_sector sector span				{color:rgba(85,85,85,1);}
 span.span_sector sector span.sec_code		{color:rgba(85,85,85,1); border-right:1px solid rgba(85,85,85,1);}
@@ -667,10 +668,10 @@ humanitarian-scope a:active		{color:rgba(255,163,0,1);}
 span.hide 		 {color:rgba(15,15,15,1); background-color:rgba(255,255,255,0.6);}
 span.hide:hover	 {background-color:rgba(255,255,255,0.8);}
 
-span.span_transaction span.hide, span.span_planned-disbursement span.hide, span.span_budget span.hide,
+span.span_transaction span.hide, span.span_planned-disbursement span.hide, span.span_budget span.hide, span.span_recipient-country span.hide, span.span_sector span.hide,
 span.span_result span.hide			{color:rgba(206,131,0,1); background-color:rgba(255,255,255,0.6);}
 span.span_result result span.hide	{color:rgba(15,15,15,1);}
-span.span_transaction span.hide:hover, span.span_planned-disbursement span.hide:hover, span.span_budget span.hide:hover,
+span.span_transaction span.hide:hover, span.span_planned-disbursement span.hide:hover, span.span_budget span.hide:hover, span.span_recipient-country span.hide:hover, span.span_sector span.hide:hover,
 span.span_result span.hide:hover	{color:rgba(255,255,255,0.8);}
 
 
