@@ -5,6 +5,8 @@ Update all themes css with new graphs and iati-identifier section
 Fix padding for new graphs in SAVi
 Fix last of type padding for sector graphs with dac vocab
 Update hide toggles for transaction
+Don't display baseline outside of correct hierarchy in results
+Add legend to new graphs
 
 
 Development Portal (2019-01-08 shi)
